style.css
body {
    margin: 0;
    min-height: 100vh;
}

header {
    height: 72px;
    background: #1F2937;
}

.header-wrapper {
    display:flex;
    justify-content: space-evenly;
    align-items: center;
    flex: 1;
}   
.header-wrapper ul {
    display:flex;
    list-style-type: none;
    gap: 16px;
}

a {
    color: #E5E7EB;
    text-decoration:none;
    font-size: 18px;
}

.logo {
    font-size: 24px;
    color: #F9FAF8;
    font-weight:bold;
}

.stockimg {
    max-width: 25%;
    max-height: 25%;
}

.content {
    background: #1F2937;
}

.maintext {
    font-size: 48px;
    font-weight: bolder;
    color: #F9FAF8;
    margin: 0;
}

.content-wrapper {
    display:flex;
    justify-content: space-evenly;
    align-items: center;
}

.maintext-wrapper {
    display:flex;
    flex-direction: column;
    padding: 16px;
    width: 300px;
}

.secondary-text {
    font-size: 18px;
    color: #E5E7EB;
}

button {
    background-color: #3882F6;
    border: none;
    color: white;
    padding: 8px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
    width: 150px;
    border-radius: 8px;
    font-weight: bold;
}

.information {
    display: flex;
    align-items: center;
    flex-direction: column;
    justify-content: space-evenly;
    padding-bottom:40px;
  }

  .cardswrapper {
    display:flex;
    flex: 1;
    padding: 10px;
    width: 800px;
    gap:40px;
    align-items: center;
    justify-content:space-evenly;
    max-height: 100%;
  }

  .informationtext {
    font-size: 36px;
    font-weight:bolder;
    color:#1F2937;
  }

  .infoimg {
    flex: 1;
    max-width: 20%;
    max-height: 20%;
    object-fit: contain;
  }

  .inspiration {
    display: flex;
    background: #E5E7EB;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding: 80px;
  }

  .inspoquote {
    width: 800px;
    font-size: 36px;
    font-style: italic;
    color:#1F2937;
    font-family: sans-serif;
    font-weight:lighter;
  }
  .quote {
    display:flex;
    font-size: 16px;
    width: 800px;
    margin-top: auto;
    justify-content:flex-end;
    font-weight:bolder;
    font-family: sans-serif;
  }

